<resources>
    <string name="app_name">CookingList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="splash_app_name">Notifications</string>

    <string name="menu_add_dish">Add dish</string>
    <string name="image_contentDescription">User uploaded image</string>

    <!--  Add dish activity  -->
    <string name="add_dish_toolbar_title">Add Dish</string>
    <string name="add_dish_input_title">Title</string>
    <string name="add_dish_input_type">Type</string>
    <string name="add_dish_input_category">Category</string>
    <string name="add_dish_input_ingredients">Ingredients</string>
    <string name="add_dish_input_cooking_time">Cooking time in minutes</string>
    <string name="add_dish_input_directions_to_cook">Directions to cook</string>
    <string name="add_dish_add_button">Add Dish</string>
    <string name="add_dish_failed_to_load_gallery_image">"Failed to load image from gallery"</string>
    <string name="add_dish_saved_gallery_image">"Saved gallery image to: %1$s"</string>
    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="tv_custom_dialog_list">Dialog Title</string>
    <string name="tv_item_dialog_list">Item value</string>
    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT DISH COOKING TIME</string>

    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title.</string>
    <string name="err_msg_select_dish_type">Select dish type.</string>
    <string name="err_msg_select_dish_category">Select dish category.</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish ingredients.</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>
</resources>